--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="/img/nat-6.jpg" class="card-img-top" alt="greenland">
+                <img src="img/nat-6.jpg" class="card-img-top" alt="greenland">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">Green land island</h3>
                     <p class="text-capitalize">South Africa</p>
