--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/nat-7.jpg" class="card-img-top" alt="northpole">
+                <img src="img/nat-7.jpg" class="card-img-top" alt="northpole">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">North Pole</h3>
                   <p class="text-capitalize">Russia</p>
@@ -197,7 +197,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/berlin.jpg" class="card-img-top" alt="Berlin">
+                <img src="img/berlin.jpg" class="card-img-top" alt="Berlin">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">Ancient Toterm</h3>
                     <p class="text-capitalize">Berlin</p>
@@ -206,7 +206,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/lisbon-3.jpg" class="card-img-top" alt="lisbon">
+                <img src="img/lisbon-3.jpg" class="card-img-top" alt="lisbon">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">Monk Palace</h3>
                     <p class="text-capitalize">Lisbon</p>
@@ -215,7 +215,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/london.jpg" class="card-img-top" alt="london">
+                <img src="img/london.jpg" class="card-img-top" alt="london">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">London Bridge</h3>
                     <p class="text-capitalize">United Kingdom</p>
@@ -235,7 +235,7 @@
           <h1 class="text-center pt-5 fst-italic fs-2 mb-5 text-white text-uppercase">testimonies from tourist</h1>
           <div class="card-group">
             <div class="card position-relative text-dark">
-              <img src="/img/customer-1.jpg" class="card-img-top" alt="customer 1">
+              <img src="img/customer-1.jpg" class="card-img-top" alt="customer 1">
               <div class="card-body">
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quibusdam. Tempora saepe ipsum neque molestias magnam omnis praesentium repellendus possimus, accusamus suscipit, ad dolorem nisi quidem doloremque voluptatum dolores modi.
@@ -244,7 +244,7 @@
               </div>
             </div>
             <div class="card position-relative text-dark">
-              <img src="/img/customer-2.jpg" class="card-img-top" alt="customer 2">
+              <img src="img/customer-2.jpg" class="card-img-top" alt="customer 2">
               <div class="card-body">
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quibusdam. Tempora saepe ipsum neque molestias magnam omnis praesentium repellendus possimus, accusamus suscipit, ad dolorem nisi quidem doloremque voluptatum dolores modi.
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div class="card position-relative text-dark">
-              <img src="/img/customer-3.jpg" class="card-img-top" alt="customer 3">
+              <img src="img/customer-3.jpg" class="card-img-top" alt="customer 3">
               <div class="card-body">
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quibusdam. Tempora saepe ipsum neque molestias magnam omnis praesentium repellendus possimus, accusamus suscipit, ad dolorem nisi quidem doloremque voluptatum dolores modi.
