--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/img/nat-8.jpg" class="card-img-top" alt="lake">
+                <img src="img/nat-8.jpg" class="card-img-top" alt="lake">
                 <div class="card-body">
                   <h3 class="fs-4 fst-italic text-success">Blue Lake</h3>
                     <p class="text-capitalize">China</p>
