--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <h3>Voluptatem dignissimos provident quasi <br>corporis voluptates sit assumenda.</h3>
         <div class="content-with-image">
             <p>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua.</span> <img src="/img/nat-1.jpg" alt="Mountain" class="rounded float-end mx-auto d-block p-5" style="margin-top: -50px; margin-right: -50px;">
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua.</span> <img src="img/nat-1.jpg" alt="Mountain" class="rounded float-end mx-auto d-block p-5" style="margin-top: -50px; margin-right: -50px;">
                 <ul>
                     <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                     <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
